fix messages and offline players